refactor: update endpoints to use Request/Response DTOs and mapper